src/tests/code/fail/fail_int_literal_parameter_type_mismatch.u
successor:(x:f64)->(x+1.0)

entrypoint:~()->(i64{successor(3)})